Bug 9644 - Compile of source3/lib/afs.c fails
Summary: Compile of source3/lib/afs.c fails
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.0
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.0.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-07 18:08 UTC by John Janosik
Modified: 2013-03-04 09:29 UTC (History)
1 user (show)

See Also:


Attachments
proposed patch (859 bytes, patch)
2013-02-18 16:43 UTC, Christian Ambach
no flags Details
patch for v4-0-test (cherry-picked from master) (976 bytes, patch)
2013-02-25 11:55 UTC, Christian Ambach
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Janosik 2013-02-07 18:08:18 UTC
Build is configured with --with-fake-kaserver option.  Fails with:


Compiling lib/afs.c
"lib/afs.c", line 244.48: 1506-280 (W) Function argument assignment between types "void*" and "int" is not allowed.
"lib/afs.c", line 244.47: 1506-098 (E) Missing argument(s).
The following command failed:

make: The error code from the last command is 1.


Stop.


Reason:

In source3/lib/afs.c:afs_login() the call to lp_servicename that is the second argument to talloc_sub_advanced is missing the talloc context.
Comment 1 Christian Ambach 2013-02-18 16:43:04 UTC
Created attachment 8569 [details]
proposed patch

this patch (against master) should fix it
Comment 2 John Janosik 2013-02-19 03:24:36 UTC
Thanks, this is the change that built and is working for me.
Comment 3 Christian Ambach 2013-02-25 11:55:50 UTC
Created attachment 8581 [details]
patch for v4-0-test (cherry-picked from master)
Comment 4 Christian Ambach 2013-03-01 13:16:16 UTC
Assigning to Karolin for inclusion into v4-0-next
Comment 5 Karolin Seeger 2013-03-01 15:41:49 UTC
Pushed to autobuild-v4-0-test.
Comment 6 Karolin Seeger 2013-03-04 09:29:05 UTC
Pushed to v4-0-test.
Closing out bug report.

Thanks!