s3:lib/afs fix the build

Fix Bug 9644 - Compile of source3/lib/afs.c fails

Bug: https://bugzilla.samba.org/show_bug.cgi?id=9644

Signed-off-by: Christian Ambach <ambi@samba.org>
Reviewed-by: Volker Lendecke <vl@samba.org>
(cherry picked from commit e7f66f37a62ad954e8b0a048905f0e6688b70849)